--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,14 +6,18 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.0.1",
     "npm": "^7.16.0",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
